--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <title>Samuel Llamas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="reset.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="reset.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <!-- <script src="main.js"></script> -->
+
 </head>
-<h1>
-    Samuel Llamas
-</h1>
-<body>
-    
+
+<body id=" container">
+
+    <section id="topBar">
+
+        <h1 id="intro">
+            Samuel Llamas
+        </h1>
+        <nav>
+            <ul>
+                <li>About</li>
+                <li>Portfolio</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </section>
+
+    <section id = "main">
+
+    </section>
+
+
+
+    <div>
+
+    </div>
+
 </body>
+
 </html>
