--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         </h1>
         <nav>
             <ul>
-                <li>About</li>
+                <li><a href="">About</a></li>
                 <li>Portfolio</li>
+                <li><a href="lubg.html">GIRLFRIEND</a></li>
                 <li>Contact</li>
             </ul>
         </nav>
