--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
         </h1>
         <nav>
             <ul>
-                <li><a href="">About</a></li>
-                <li>Portfolio</li>
-                <li><a href="lubg.html">GIRLFRIEND</a></li>
-                <li>Contact</li>
+                <li><a class = "active" href="index.html">About</a></li>
+                <li><a href="#">Portfolio</a></li>       
+                <li><a href="#">Portfolio</a></li> 
             </ul>
         </nav>
     </section>
