--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <nav>
             <ul>
                 <li><a class = "active" href="index.html">About</a></li>
-                <li><a href="#">Portfolio</a></li>       
-                <li><a href="#">Portfolio</a></li> 
+                <li><a href="portfolio.html">Portfolio</a></li>       
+                <li><a href="contact.html">Contact</a></li> 
             </ul>
         </nav>
     </section>
@@ -31,30 +31,28 @@
         <h1 id="bioHead">
             About me!
         </h1>
-        <img id= "portrait" src="pic.jpg" height="25%" width="25%"/>
-        <p id="bio">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc consectetur felis eget velit semper, sit amet fringilla quam imperdiet. Duis volutpat a metus ultrices fringilla. Donec tempus lectus eu eros tincidunt sollicitudin. Quisque eleifend eu urna ac faucibus. Cras accumsan non justo nec venenatis. Pellentesque varius tortor elit, in sodales sem molestie sed. Suspendisse vel turpis et lectus pretium lacinia id in sem. Mauris fringilla lobortis suscipit. Cras dignissim massa lorem, et dignissim dolor tincidunt in. Proin blandit arcu at sapien aliquet, ultrices molestie nulla sodales. Etiam dapibus, lacus at molestie gravida, velit urna ultricies nulla, a tempus metus nibh ac mauris. Nullam risus sem, elementum ac libero in, porttitor laoreet eros. Pellentesque consectetur sit amet arcu vitae elementum. Aliquam vel porta dui, quis elementum justo. Pellentesque mollis convallis odio. Donec quis hendrerit dolor
-        </p>
 
-        <p class="rest">
+        <div id='container'>
+            <img id= "portrait" src="pic.jpg" height="25%" width="25%"/>
+            <p id="bio">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc consectetur felis eget velit semper, sit amet fringilla quam imperdiet. Duis volutpat a metus ultrices fringilla. Donec tempus lectus eu eros tincidunt sollicitudin. Quisque eleifend eu urna ac faucibus. Cras accumsan non justo nec venenatis. Pellentesque varius tortor elit, in sodales sem molestie sed. Suspendisse vel turpis et lectus pretium lacinia id in sem. Mauris fringilla lobortis suscipit. Cras dignissim massa lorem, et dignissim dolor tincidunt in. Proin blandit arcu at sapien aliquet, ultrices molestie nulla sodales. Etiam dapibus, lacus at molestie gravida, velit urna ultricies nulla, a tempus metus nibh ac mauris. Nullam risus sem, elementum ac libero in, porttitor laoreet eros. Pellentesque consectetur sit amet arcu vitae elementum. Aliquam vel porta dui, quis elementum justo. Pellentesque mollis convallis odio. Donec quis hendrerit dolor
+            </p>
+
+            <p class="rest">
                 Mauris fringilla lobortis suscipit. Cras dignissim massa lorem, et dignissim dolor tincidunt in. Proin blandit arcu at sapien aliquet, ultrices molestie nulla sodales. Etiam dapibus, lacus at molestie gravida, velit urna ultricies nulla, a tempus metus nibh ac mauris. Nullam risus sem, elementum ac libero in, porttitor laoreet eros. Pellentesque consectetur sit amet arcu vitae elementum. Aliquam vel porta dui, quis elementum justo. Pellentesque mollis convallis odio. Donec quis hendrerit dolor
-        </p>
+            </p>
 
-  
-        <p class="rest">
-            Duis volutpat a metus ultrices fringilla. Donec tempus lectus eu eros tincidunt sollicitudin. Quisque eleifend eu urna ac faucibus. Cras accumsan non justo nec venenatis. Pellentesque varius tortor elit, in sodales sem molestie sed. Suspendisse vel turpis et lectus pretium lacinia id in sem. Mauris fringilla lobortis suscipit. Cras dignissim massa lorem, et dignissim dolor tincidunt in.
+    
+            <p class="rest">
+                Duis volutpat a metus ultrices fringilla. Donec tempus lectus eu eros tincidunt sollicitudin. Quisque eleifend eu urna ac faucibus. Cras accumsan non justo nec venenatis. Pellentesque varius tortor elit, in sodales sem molestie sed. Suspendisse vel turpis et lectus pretium lacinia id in sem. Mauris fringilla lobortis suscipit. Cras dignissim massa lorem, et dignissim dolor tincidunt in.
 
-        </p>
-
-
-
+            </p>
+        </div>
     </section>
 
-
-
-    <div>
-
-    </div>
+    <footer id = "copyright">
+        Copyright ©
+    </footer>
 
 </body>
 
