--- a/contact.html
+++ b/contact.html
@@ -39,19 +39,18 @@
                 <input type="text" id="name" name="name">
             </form>
 
-            <form id="inputs">
+            <form id="inputs" action="action="https://formspree.io/sam.llamas@att.net"
+            method="POST"">
                 <label for="name">Email</label>
                 <input type="text" id="name" name="name">
-            </form>
-
-            <form id="inputs">
+                       
                 <label for="message">Message</label>
                 <textarea id="message">
 
                 </textarea>
             </form>
 
-            <button id="email">Submit</button>
+            <button type="submit" id="email">Submit</button>
 
             <p class="rest">
                     
