--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                 </textarea>
             </form>
 
-            <button type="submit" id="email">Submit</button>
+            <button type="submit"  onclick='location.reload()' id="email">Submit</button>
 
             <p class="rest">
                     
