--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
                 Contact
             </h1>
             
-            <form id="inputs" action="action="https://formspree.io/sam.llamas@att.net"
-            method="POST"">
+            <form id="inputs" action="https://formspree.io/Sam.llamas@att.net"
+            method="POST">
                 <label for="name">Name</label>
                 <input name="name" placeholder="Your Name" type="text" id="name" >
             
