--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,7 @@
                 Contact
             </h1>
             
-            <form id="inputs" action="https://formspree.io/Sam.llamas@att.net"
-            method="POST">
+            <form  method="POST" action="https://formspree.io/Sam.llamas@att.net" id="inputs">
                 <label for="name">Name</label>
                 <input name="name" placeholder="Your Name" type="text" id="name" >
             
