--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                 <textarea name="message" placeholder="Your Message"  id="message"></textarea>
             </form>
 
-            <button type="submit" onclick='location.reload()' id="email">Submit</button>
+            <button type="submit" id="email">Submit</button>
         </div>
 
     </section>
