--- a/portfolio.html
+++ b/portfolio.html
@@ -33,11 +33,23 @@
             Portfolio
         </h1>
 
-        <div id="container">
+        <div id="bodyContainer">
 
-        <img src="https://placeimg.com/400/400/tech" height="25%" width="25%"/>
+            <div>
 
-        <img src="https://placeimg.com/400/400/arch/sepia" height="25%" width="25%"/>
+                <img src="https://placeimg.com/400/400/tech" height="25%" width="25%"/>
+
+                <img src="https://placeimg.com/400/400/arch/sepia" height="25%" width="25%"/>
+            </div>
+
+                <img src="https://placeimg.com/400/400/nature" height="25%" width="25%"/>
+
+                <img src="https://placeimg.com/400/400/arch" height="25%" width="25%"/>
+
+            <div>
+                <img src="http://placeimg.com/400/400/tech?t=1523566787035" height="25%" width="25%"/>
+            </div>
+
 
         </div>
     </section>
