--- a/portfolio.html
+++ b/portfolio.html
@@ -33,22 +33,28 @@
             Portfolio
         </h1>
 
-        <div id="bodyContainer">
+        <div >
 
-            <div>
+            <div class="bodyContainer">
 
-                <img src="https://placeimg.com/400/400/tech" height="25%" width="25%"/>
+                <img src="http://placeimg.com/300/300/tech"/>
 
-                <img src="https://placeimg.com/400/400/arch/sepia" height="25%" width="25%"/>
+                <img src="http://placeimg.com/300/300/nature"/>
             </div>
 
-                <img src="https://placeimg.com/400/400/nature" height="25%" width="25%"/>
+            <div class="bodyContainer">
 
-                <img src="https://placeimg.com/400/400/arch" height="25%" width="25%"/>
+                <img src="https://placeimg.com/300/300/nature" />
 
-            <div>
-                <img src="http://placeimg.com/400/400/tech?t=1523566787035" height="25%" width="25%"/>
+                <img src="https://placeimg.com/300/300/arch" />
+            
             </div>
+
+            <div class="bodyContainer">
+                <img src="http://placeimg.com/300/300/tech?t=1523566787035" />
+            </div>
+
+            <span class="stretch"></span>
 
 
         </div>
