Last Version for Hwk 1

--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,12 @@
         </div>
 
     </section>
+    
+    <div class="push"></div>
+
+    <footer id = "copyright">
+            Copyright ©
+    </footer>
 
 </body>
 
