--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
         </div>
     </section>
 
+    <div class="push"></div>
+
     <footer id = "copyright">
-        Copyright ©
+            Copyright ©
     </footer>
 
 </body>
