--- a/index.html
+++ b/index.html
@@ -34,19 +34,18 @@
 
             <div id='container'>
                 <img id= "portrait" src="pic.jpg" height="25%" width="25%"/>
-                <p id="bio">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc consectetur felis eget velit semper, sit amet fringilla quam imperdiet. Duis volutpat a metus ultrices fringilla. Donec tempus lectus eu eros tincidunt sollicitudin. Quisque eleifend eu urna ac faucibus. Cras accumsan non justo nec venenatis. Pellentesque varius tortor elit, in sodales sem molestie sed. Suspendisse vel turpis et lectus pretium lacinia id in sem. Mauris fringilla lobortis suscipit. Cras dignissim massa lorem, et dignissim dolor tincidunt in. Proin blandit arcu at sapien aliquet, ultrices molestie nulla sodales. Etiam dapibus, lacus at molestie gravida, velit urna ultricies nulla, a tempus metus nibh ac mauris. Nullam risus sem, elementum ac libero in, porttitor laoreet eros. Pellentesque consectetur sit amet arcu vitae elementum. Aliquam vel porta dui, quis elementum justo. Pellentesque mollis convallis odio. Donec quis hendrerit dolor
+                <p class="bio">
+                    Hello and welcome to my portfolio! While it looks simple right now, I hope to build on it and eventually have a website that will show the full extent of my ability with web development, so be sure to come back every now and then to watch it grow. 
+                </p>
+                <h2>A litte bit about me:</h2>
+                <p class="bio">
+                    Despite my rather deceptive appearance, I was born in Guadalajara, Mexico but raised in Brownsville, Texas. I have a wide variety of hobbies; starting with more stereotypical ones like video games and ending with more atypical ones like Fire spinng and bartending. I consider myself extremely adapative to any scenario, as well as a quick learner. I achieved the rank of Eagle Scout in Boy Scouts after 12 years of work in 2013 and graduated from UT Austin in 2017 with a BA in Economic and certificates in Comptuer Science and International Business.         
+                </p>
+                <h2> Why do Web Development?</h2>
+                <p class = "rest">
+                    I've always had a knack for tinkering with various forms of software which is what lead to my interest in computer science as a whole. From there, I found my calling in web development. Watching a site come together bit by bit is an expierence that I could only dream of. I find it fascinating to see how simple text being written in an editor can build something that everyone uses in their day to day life.
                 </p>
 
-                <p class="rest">
-                    Mauris fringilla lobortis suscipit. Cras dignissim massa lorem, et dignissim dolor tincidunt in. Proin blandit arcu at sapien aliquet, ultrices molestie nulla sodales. Etiam dapibus, lacus at molestie gravida, velit urna ultricies nulla, a tempus metus nibh ac mauris. Nullam risus sem, elementum ac libero in, porttitor laoreet eros. Pellentesque consectetur sit amet arcu vitae elementum. Aliquam vel porta dui, quis elementum justo. Pellentesque mollis convallis odio. Donec quis hendrerit dolor
-                </p>
-
-        
-                <p class="rest">
-                    Duis volutpat a metus ultrices fringilla. Donec tempus lectus eu eros tincidunt sollicitudin. Quisque eleifend eu urna ac faucibus. Cras accumsan non justo nec venenatis. Pellentesque varius tortor elit, in sodales sem molestie sed. Suspendisse vel turpis et lectus pretium lacinia id in sem. Mauris fringilla lobortis suscipit. Cras dignissim massa lorem, et dignissim dolor tincidunt in.
-
-                </p>
             </div>
         </section>
 
