--- a/portfolio.html
+++ b/portfolio.html
@@ -37,25 +37,29 @@
 
                 <div class="bodyContainer">
                     <div class="imgBox">
-                            <img src="http://placeimg.com/300/300/tech"   width="100%"/>
-                            <p class=overtext>TEST</p>
+                            <a href = "https://samllamas.github.io/Word-Guess-Game/">
+                                <img src="https://4.bp.blogspot.com/HFIidCyc7QnLC-YJypHSnAiiSMaE8zJM92xK75D738PtpIBfQVlupcPEsPTqnhp7xj4=w300"   width="100%"/>
+                            </a>
+                            <p class=overtext>HangMan</p>
                     </div>
 
                     <div class="imgBox">
-                            <img src="http://placeimg.com/300/300/nature"  width="100%"/>
-                            <p class=overtext>TEST</p>
+                            <a href= "https://samllamas.github.io/NewYorkTimesApp/">
+                                <img src="https://texasperformingarts.org/sites/files/tpa/tpa_news_images/new-york-times-logo.jpg"  width="100%"/>
+                            </a>
+                            <p class=overtext>New York Times Search</p>
                     </div>
                 </div>
 
                 <div class="bodyContainer">
                     <div class="imgBox">
                             <img src="https://placeimg.com/300/300/nature" width="100%"/>
-                            <p class=overtext>TEST</p>
+                            <p class=overtext>To Be Added later</p>
                     </div>
 
                     <div class="imgBox">
                             <img src="https://placeimg.com/300/300/arch"  width="100%"/>
-                            <p class=overtext>TEST</p>
+                            <p class=overtext>To Be Added later</p>
                     </div>
                 
                 </div>
@@ -63,7 +67,7 @@
                 <div class="bottomContainer">
                     <div class="imgBox">
                         <img src="http://placeimg.com/300/300/tech?t=1523566787035" width="100%"/>
-                        <p class=overtext>TEST</p>
+                        <p class=overtext>To Be Added later</p>
                     </div>
                     
                 </div>
