--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                 <p class = "rest">
                     I've always had a knack for tinkering with various forms of software which is what lead to my interest in computer science as a whole. From there, I found my calling in web development. Watching a site come together bit by bit is an expierence that I could only dream of. I find it fascinating to see how simple text being written in an editor can build something that everyone uses in their day to day life.
                 </p>
+                <h2> Why do Web Development?</h2>
+                <p class = "rest">
+                    I've always had a knack for tinkering with various forms of software which is what lead to my interest in computer science as a whole. From there, I found my calling in web development. Watching a site come together bit by bit is an expierence that I could only dream of. I find it fascinating to see how simple text being written in an editor can build something that everyone uses in their day to day life.
+                </p>
+
+                
 
             </div>
         </section>
